--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -303,6 +303,18 @@
             Portuguese:"Um(a) [unit] inimigo(a) foi destruido(a) enquanto atacando nosso(a) [ourUit]"
             Japanese:"「私たちの[ourUnit]を攻撃している間に敵[unit]が破壊された"
         }
+		
+		"Our [attackerName] was destroyed by an intercepting [interceptorName]":{
+		}
+		
+		"Our [interceptorName] intercepted and destroyed an enemy [attackerName]":{
+		}
+		
+		"Our [$attackerName] was attacked by an intercepting [$interceptorName]":{
+		}
+		
+		"Our [$interceptorName] intercepted and attacked an enemy [$attackerName]":{
+		}
         
         "An enemy [unit] was spotted near our territory":{
             Italian:"Abbiamo avvistato un'unità nemica [unit] vicino al nostro territorio"
