--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -835,7 +835,7 @@
 		French:"Infanterie de la grande guerre"
 	}
 
-    "Foreign Legion":{ // French Unique
+    	"Foreign Legion":{ // French Unique
 		Italian:"Legione straniera"
 		Romanian:"Legiunea Străină"
 		Spanish:"Legion Olvidada"
@@ -972,6 +972,7 @@
 	}
 	
 	"[percent]% chance to intercept air attacks":{
+		Italian:"[percent]% probabilità di intercettare attacchi aerei"
 	}
 	
 	
@@ -1067,17 +1068,17 @@
 		French:"Bombardier"
 	}
 
-    "Mechanized Infantry":{
+    	"Mechanized Infantry":{
 		Italian:"Fanteria meccanizzata"
 		Simplified_Chinese:"机械化步兵"
 		French:"Infantrie mécanisée"
 	}
 
-    "Modern Armor":{
+    	"Modern Armor":{
 		Italian:"Armatura moderna"
 		Simplified_Chinese:"现代坦克"
 		French:"Blindé moderne"
-    }
+    	}
 
 	"B17":{ // american unique
 		Italian:"B-17"
@@ -1302,8 +1303,8 @@
 	
 	"Bonus vs City":{
 		Italian:"Bonus contro Città"
-        Simplified_Chinese:"攻击城市时+15%战斗力"
-        French:"Bonus contre les villes"
+        	Simplified_Chinese:"攻击城市时+15%战斗力"
+        	French:"Bonus contre les villes"
 	}
 	
 	"Bonus vs [unitType]":{
