--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -947,8 +947,8 @@
 		Italian:"Otto von Bismark" //Same as Italian
 	}
 
-	"Upon defeating a Barbarian unit inside an encampment, there is a 67% chance to earn 25 Gold and they join the Germans. Pay 25% less for land unit maintenance.":{
-		Italian:"Quando sconfiggi un'unità barbara nel suo accampamento, hai il 67% di chance di ottenere 25 Oro e che l'unità si unisca all'esercito. -25% mantenimento delle unità terrestri."
+	"67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment. -25% land units maintenance.":{
+		Italian:"67% di probabilità di ottenere 25 Oro e reclutare un'unità barbara da un accampamento catturato. -25% mantenimento delle unità terrestri."
 	}
 	
 	"India":{
@@ -978,7 +978,7 @@
 		Portuguese:"50% de chance de converter uma unidade naval bárbara para ti e ganhar 25 ouro. Gaste apenas 1/3 do custo normal para manter unidades navais."
 		French:"50% de chance de convertir une unité barbare navale et de gagner 25 Or. Les unités navales coutent 3 fois moins à entretenir."
 	}
-/*
+	/*
 
 	"Iroquois":{
 		Italian:"Irochese"
