--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -722,6 +722,10 @@
 		Simplified_Chinese:"航空"
 		Portuguese:"Vôo"
 	}
+
+	"Radar":{
+		Italian:"Radar"
+	}
 	
 ///////// Technologies (Information Era)
 	
