Changed "free population" in cities to "unassigned population" to be less confusing

--- a/android/assets/jsons/Translations/Other.json
+++ b/android/assets/jsons/Translations/Other.json
@@ -862,7 +862,7 @@
 		Portuguese:"Bonus de crescimento"
 	}
 
-	"Free population":{ // as in "Free population: 2/13
+	"Unassigned population":{ // as in "Unassigned population: 2/13
 		Italian:"Popolazione libera"
 		Russian:"Свободное население"
 		French:"Population libre"
