--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -264,6 +264,7 @@
 
 	"Provides land units every 20 turns at 30 Influence":{
 		Italian:"Concede un'unità terrestre ogni 20 turni a minimo 30 Punti Influenza"
+		French:"Fournit des unités terrestres tous les 20 tours à 30 d'influence"
 	},
 
 	"Gift [goldAmount] gold":{
@@ -367,35 +368,44 @@
 	// Demands
 	"Demands":{
 		Italian:"Richieste"
+		French:"Demandes"
 	}
 	"Please don't settle new cities near us.":{
 		Italian:"Smetti di fondare città vicino a noi."
+		French:"Veuillez ne pas construire de villes proches de nous."
 	}
 	"Very well, we shall look for new lands to settle.":{
 		Italian:"Ti porgiamo le nostre scuse."
+		French:"Très bien, nous chercherons d'autres terres à coloniser"
 	}
 	"We shall do as we please.":{
 		Italian:"Colonizzeremo la terra che ci pare e piace."
+		French:"Nous faisons ce que nous voulons."
 	}
 	
 	"You betrayed your promise to not settle cities near us":{
 		Italian:"Hai tradito la tua promessa di non fondare città nelle nostre vicinanze."
+		French:"Vous avez trahis votre promesse de ne pas fonder de ville proche de nous"
 	}
 	
 	"You fulfilled your promise to stop settling cities near us!":{
 		Italian:"Hai mantenuto la tua promessa di non fondare città nelle nostre vicinanze."
+		French:"Vous avez tenu votre promesse de ne pas fonder de ville proche de nous!"
 	}
 	
 	"You refused to stop settling cities near us":{
 		Italian:"Hai continuato a fondare città nelle nostre vicinanze."
+		French:"Vous avez refusez de ne pas fonder de villes proches de nous"
 	}
 	
 	"We noticed your new city near our borders, despite your promise. This will have....implications.":{
 		Italian:"Abbiamo notato la la tua nuova città vicino ai nostri confini. E questo avrà... ripercussioni sui nostri rapporti."
+		French:"Nous avons remarquez votre nouvelle ville à notre frontière, malgré votre promesse. Cela aura des... conséquences."
 	}
 	
 	"Your arrogant demands are in bad taste":{
 		Italian:"Hai fatto una richiesta arrogante."
+		French:"Vos arrogantes demandes sont de mauvais goût"
 	}
 	
 	
@@ -404,18 +414,22 @@
 	
 	"Cultured":{
 		Italian:"Acculturata"
+		French:"Cultivée"
 	}
 	
 	"Maritime":{
 		Italian:"Marittima"
+		French:"Maritime" //same
 	}
 	
 	"Mercantile":{
 		Italian:"Mercantile"
+		//same in french
 	}
 
 	"Militaristic":{
 		Italian:"Militaristica"
+		French:"Militarisée"
 	}
 
 ////// Trade	
@@ -693,6 +707,7 @@
 
 	"Nebuchadnezzar II":{//Babylonian Leader
 		Italian:"Nabucodonosor II"
+		French:"Nabuchodonosor II"
 	}
 	
 	"Greece":{	
@@ -708,6 +723,7 @@
 
 	"Alexander":{
 		Italian:"Alessandro"
+		French:"Alexandre le Grand"
 	}
 
 	"China":{	
@@ -745,6 +761,7 @@
 
 	"Ramesses II":{
 		Italian:"Ramses II"
+		French:"Ramsès II"
 	}
 
 	"+20% production towards Wonder construction":{
@@ -771,6 +788,7 @@
 
 	"Elizabeth":{
 		Italian:"Elisabetta"
+		//same in french
 	}
 
 	"+2 movement for all naval units":{
@@ -797,6 +815,7 @@
 
 	"Napoleon":{
 		Italian:"Napoleone"
+		French:"Napoléon"
 	}
 
 	"+2 Culture per turn from cities before discovering Steam Power":{
@@ -823,6 +842,7 @@
 
 	"Catherine":{
 		Italian:"Caterina II"
+		French:"Catherine II"
 	}
 
 	"Strategic Resources provide +1 Production, and Horses, Iron and Uranium Resources provide double quantity":{
@@ -849,6 +869,7 @@
 
 	"Augustus Caesar":{
 		Italian:"Cesare Augusto"
+		French:"Jule César"
 	}
 
 	"+25% Production towards any buildings that already exist in the Capital":{
@@ -876,6 +897,7 @@
 
 	"Harun al-Rashid":{
 		Italian:"Harun al-Rashid" //Same as Italian
+		French:"Hâroun ar-Rachîd"
 	}
 
 	"+1 Gold from each Trade Route, Oil resources provide double quantity":{
@@ -898,6 +920,7 @@
 
 	"George Washington":{
 		Italian:"George Washington" //Same as Italian
+		//same in french
 	}
 
 	"All land military units have +1 sight, 50% discount when purchasing tiles":{
@@ -924,6 +947,7 @@
 
 	"Oda Nobunaga":{
 		Italian:"Oda Nobunaga" //Same as Italian
+		//same in french
 	}
 
 	"Units fight as though they were at full strength even when damaged":{
@@ -946,10 +970,12 @@
 
 	"Otto von Bismark":{
 		Italian:"Otto von Bismark" //Same as Italian
+		French:"Otto von Bismarck"
 	}
 
 	"67% chance to earn 25 Gold and recruit a Barbarian unit from a conquered encampment. -25% land units maintenance.":{
 		Italian:"67% di probabilità di ottenere 25 Oro e reclutare un'unità barbara da un accampamento catturato. -25% mantenimento delle unità terrestri."
+		French:"67% de chance de gagner 25 or et d'enroler une unité barbare lors de la prise d'un campement barbare. -25% de coût de maintenance pour les unités terrestres."
 	}
 	
 	"India":{
@@ -960,6 +986,7 @@
 
 	"Gandhi":{
 		Italian:"Gandhi" //Same as Italian
+		//same in french
 	}
 
 	"Unhappiness from number of Cities doubled. Unhappiness from number of Citizens halved.":{
@@ -976,6 +1003,7 @@
 
 	"Suleiman I":{
 		Italian:"Solimano I"
+		French:"Soliman le Magnifique"
 	}
 
 	"Pay only one third the usual cost for naval unit maintenance. Melee naval units have a 1/3 chance to capture defeated naval units.":{
