--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1019,6 +1019,10 @@
 		French:"Canon antichar"
 	}
 
+	"Anti-Aircraft Gun":{
+		Italian:"Cannone antiaereo"
+	}
+
 
 	"Marine":{
 		Italian:"Marine"
