--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -765,6 +765,14 @@
 		Portuguese:"Computadores"
 	}
 
+	"Lasera":{
+		Italian:"Laser"
+	}
+
+	"Mobile Tactics":{
+		Italian:"Tattiche mobili"
+	}
+
 	"Combined Arms":{
 		Italian:"Armi combinate"
 		Russian:"Комбинированные руки"
