--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1427,7 +1427,7 @@
 	}
 	
 	"Hubble Space Telescope":{
-		Italian:"Telescopio spaziale Hubble"
+		Italian:"Telescopio Spaziale Hubble"
 		German:"Hubble Weltraumteleskop"
 		French:"Téléscope de Hubble"
 		Simplified_Chinese:"哈勃太空望远镜"
