Travis test + minor fixes

--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -901,7 +901,7 @@
 		French:"Mitrailleuse"
 	}
 
-	"Anti-aircraft Gun":{
+	"Anti-Aircraft Gun":{
 		Italian:"Cannone antiaereo"
 		Romanian:"Tun antiaerian"
 		Spanish:"Arma Anti-Aerea"
