--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -765,6 +765,10 @@
 		Portuguese:"Computadores"
 	}
 
+	"Mobile Tactics":{
+		Italian:"Tattiche mobili"
+	}
+
 	"Combined Arms":{
 		Italian:"Armi combinate"
 		Russian:"Комбинированные руки"
@@ -824,12 +828,10 @@
 	
 ///////// Technologies (Future Era)
 
-	/*
 	"Lasers":{
 		Italian:"Laser"
 		French:"Lasers"
 	}
-	*/
 
 	"Nanotechnology":{
 		Italian:"Nanotecnologia"
