--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -401,6 +401,26 @@
 		French:"Vos arrogantes demandes sont de mauvais goût"
 	}
 	
+	"I have just received a report that large numbers of your troops are now next to my borders. Keep them out if you want peace to continue.":{
+		Italian:"Abbiamo notato che stai ammassando molte truppe ai nostri confini. Se vuoi che la pace continui, forse dovresti ritirarle..."
+	}
+	
+	"Glad you've noticed. It's time for you to die.":{
+		Italian:"Fai bene a preoccuparti. Per te è l'ora di morire!"
+	}
+	
+	"Don't worry. Our units are just passing through.":{
+		Italian:"Siamo inoffensivi. Le nostre unità sono solo di passaggio."
+	}
+	
+	"At least you're being honest about it. It could be your only quality, on the other hand.":{
+		Italian:"Beh, almeno sei onesto. D'altra parte potrebbe essere la tua unica qualità."
+	}
+	
+	"I can only hope so...":{
+		Italian:"Posso solo sperare che sia così."
+	}
+	
 	
 ////// City-States Types
 
@@ -447,6 +467,10 @@
 		Simplified_Chinese:"提供贸易"
 		Portuguese:"Oferecer uma troca comercial" // seems like not one person wants to :D
 		German:"Handel anbieten"
+	}
+
+	"Retract offer":{	
+		Italian:"Ritira offerta"
 	}
 
 	"What do you have in mind?":{	
@@ -627,6 +651,10 @@
 		French:"Déclarations de guerre"
 		Simplified_Chinese:"宣战"
 		Portuguese:"Declarações de guerra"
+	}
+
+	"Introduction to [nation]":{
+		Italian:"Introduci a [nation]"
 	}
 
 	"Luxury resources":{
