--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -314,6 +314,12 @@
 	"Marathon":{
 		Italian:"Maratona"
 	}
+
+////
+	
+	"It looks like we can't make a map with the parameters you requested! Maybe you put too many players into too small a map?":{
+		Italian:"Sembra che i parametri da te impostati siano eccessivi per questa mappa! Forse hai messo troppi giocatori o altri parametri?"
+	}
 	
 	
 ////////////// 	Save and load game
